[gd_scene load_steps=22 format=2]

[ext_resource path="res://Scenes/Level_Components/Puzzle_Elements/Key.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Level_Components/Puzzle_Elements/Obstacle.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/LevelControl.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/IDE.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/CodeBlockBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/Forward.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/RotateLeft.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/RotateRight.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/Pickup.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/UseItem.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/LevelClearedPopup.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/Interact.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/Background.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/TextBox.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/Inventory.tscn" type="PackedScene" id=15]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/Grid.tscn" type="PackedScene" id=16]
[ext_resource path="res://Scenes/Level_Components/Puzzle_Elements/Button.tscn" type="PackedScene" id=17]
[ext_resource path="res://Scenes/Level_Components/Puzzle_Elements/Door.tscn" type="PackedScene" id=18]
[ext_resource path="res://Scenes/Level_Components/Puzzle_Elements/Robot.tscn" type="PackedScene" id=19]
[ext_resource path="res://Scripts/Levels/Data_Structures/1 - IntroToInventory.gd" type="Script" id=20]
[ext_resource path="res://Assets/Placeholders/Up.png" type="Texture" id=21]

[node name="1 - Intro to Inventory S" type="Node2D"]
script = ExtResource( 20 )

[node name="Inventory" parent="." instance=ExtResource( 15 )]

[node name="Inventory_Arrow" type="Sprite" parent="Inventory"]
position = Vector2( -70, 50 )
rotation = 1.5708
scale = Vector2( 1.5, 1.5 )
z_index = 99
texture = ExtResource( 21 )

[node name="Grid" parent="." instance=ExtResource( 16 )]

[node name="Robot" parent="Grid" instance=ExtResource( 19 )]

[node name="Button1" parent="Grid" instance=ExtResource( 17 )]

[node name="DoorR" parent="Grid" instance=ExtResource( 18 )]

[node name="KeyR" parent="Grid" instance=ExtResource( 1 )]

[node name="Door" parent="Grid" instance=ExtResource( 18 )]

[node name="Obstacle1" parent="Grid" instance=ExtResource( 2 )]

[node name="Obstacle2" parent="Grid" instance=ExtResource( 2 )]

[node name="Level Control" parent="." instance=ExtResource( 3 )]

[node name="IDE" parent="." instance=ExtResource( 4 )]

[node name="CodeBlockBar" parent="." instance=ExtResource( 5 )]

[node name="Forward" parent="CodeBlockBar" instance=ExtResource( 6 )]

[node name="RotateLeft" parent="CodeBlockBar" instance=ExtResource( 7 )]

[node name="RotateRight" parent="CodeBlockBar" instance=ExtResource( 8 )]

[node name="Interact" parent="CodeBlockBar" instance=ExtResource( 12 )]

[node name="Pickup" parent="CodeBlockBar" instance=ExtResource( 9 )]

[node name="UseItem" parent="CodeBlockBar" instance=ExtResource( 10 )]

[node name="Background" parent="." instance=ExtResource( 13 )]

[node name="AcceptDialog" parent="." instance=ExtResource( 11 )]

[node name="TextBox" parent="." instance=ExtResource( 14 )]

[editable path="IDE"]
[editable path="IDE/Main"]
